# src/domain/model/nft/INftRepository.ts
@@ -1,0 +1,8 @@
+import { Nft } from "@prisma/client";
+
+
+export interface INftRepository {
+    create(tokenId: string, tokenAddress: string, name: string, tokenHash: string, tokenUri: string, collectionId: string): Promise<Nft | null>;
+    getAllByCollection(collectionId: string): Promise<Nft[]>;
+    delete(id: string): Promise<boolean>;
+}
